--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@capacitor/preferences": "^4.0.1",
     "@capacitor/status-bar": "4.0.1",
     "@ionic/angular": "^6.0.0",
+    "html2canvas": "^1.4.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
