--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "~13.2.2",
     "@capacitor/android": "4.3.0",
     "@capacitor/app": "4.0.1",
+    "@capacitor/camera": "^4.1.3",
     "@capacitor/core": "4.3.0",
     "@capacitor/haptics": "4.0.1",
     "@capacitor/keyboard": "4.0.1",
